<resources>
    <string name="app_name">报刊订阅</string>
    <string name="login">登录</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="textl">账号</string>
    <string name="textp">密码</string>
    <string name="dl">登录</string>
    <string name="jzmm">记住密码</string>
    <string name="xianshi">显示密码</string>
    <string name="welcome">欢迎您</string>
    <string name="corrorInfo">至少3位</string>
    <string name="success">登录成功</string>
    <string name="fail">登录失败</string>
    <string name="corrorInfo1">不能为空</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="register">还没账号？点击注册</string>
    <string name="title_activity_register">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">密码不能少于4位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_password2">请再次确认密码</string>
    <string name="IDcard">请输入身份证号(18位)</string>
    <string name="prompt_name">请输入注册人真实姓名</string>
    <string name="prompt_phonenum">请输入电话号码(11位）</string>
    <string name="prompt_codenum">请输入验证码</string>
    <string name="error_empty_password">密码不能为空</string>
    <string name="error_entrue_password">确认密码填写错误</string>
    <string name="error_empty_name">姓名必填不能为空</string>
    <string name="error_empty_id">身份证号不能为空</string>
    <string name="error_empty_phone">电话不能为空</string>
    <string name="error_empty_code">请填写验证码</string>
    <string name="error_invalid_phone">手机号不能少于11位</string>
    <string name="getcodenum">获取验证码</string>
    <string name="error_invalid_id">身份证号不能少于18位</string>
    <string name="error_code">验证码填写错误</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">订单</string>
    <string name="title_notifications">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="booknum">请输入订阅数</string>
    <string name="newsnum">请输入报刊号</string>
    <string name="bookid">请输入订单号</string>
    <string name="newsname">请输入报刊名</string>
    <string name="addbook">管理员添加订单</string>
    <string name="title_activity_book_byuser">BookByuserActivity</string>
    <string name="ads">完善地址</string>
    <string name="prompt_ads">请输入收货地址</string>
    <string name="modify">修改地址</string>
    <string name="pro_adss">请输入地址</string>
    <string name="pro_pas">请输入登录密码</string>
    <string name="infom">地址不能为空</string>
    <string name="infom1">请输入密码</string>
    <string name="infom2">密码不正确</string>
    <string name="btnmodify">修改</string>
    <string name="min">-</string>
    <string name="add">+</string>
    <string name="title_activity_adm_index">AdmIndexActivity</string>
    <string name="out">退出登录</string>
    <string name="adnewsbtn">添加报刊</string>
    <string name="titledialog">选择日期</string>
    <string name="year">请输入年份</string>
    <string name="adnewsname">请输入报刊名</string>
    <string name="adusername">请输入用户名</string>
    <string name="adname">请输入姓名</string>
    <string name="usermanage">用户管理</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="err_usernmae_length">用户名不能少于3位</string>

</resources>
